--- a/ProxiJob/app/src/main/res/layout/activity_informations_client.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_informations_client.xml
@@ -23,6 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:fontFamily="@font/avenirltstd_medium"
             android:layout_alignParentTop="true"
             android:text="Mes informations"
             android:textAlignment="center"
@@ -36,6 +37,7 @@
         <EditText
             android:id="@+id/lastname"
             android:layout_width="match_parent"
+            android:fontFamily="@font/avenirltstd_medium"
             android:layout_height="wrap_content"
             android:hint="Nom"
             android:layout_margin="10dp"
@@ -50,6 +52,7 @@
             android:id="@+id/firstname"
             android:layout_margin="10dp"
             android:layout_width="match_parent"
+            android:fontFamily="@font/avenirltstd_medium"
             android:layout_height="wrap_content"
             android:background="@null"
             android:inputType="text"
@@ -65,6 +68,7 @@
             android:id="@+id/layoutDate"
             android:layout_margin="10dp"
             android:layout_width="match_parent"
+            android:fontFamily="@font/avenirltstd_medium"
             android:layout_height="wrap_content"
             android:background="@null"
             android:textColorHint="@color/colorPrimaryDark"
@@ -81,6 +85,7 @@
             android:id="@+id/mail"
             android:layout_margin="10dp"
             android:layout_width="match_parent"
+            android:fontFamily="@font/avenirltstd_medium"
             android:layout_height="wrap_content"
             android:hint="Email"
             android:textColorHint="@color/colorPrimaryDark"
@@ -95,6 +100,7 @@
             android:layout_width="196dp"
             android:layout_height="52dp"
             android:layout_centerHorizontal="true"
+            android:fontFamily="@font/avenirltstd_medium"
             android:layout_gravity="center"
             android:layout_marginTop="26dp"
             android:layout_below="@id/mail"
