--- a/ProxiJob/app/src/main/res/layout/activity_map_informations_details.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_map_informations_details.xml
@@ -11,6 +11,7 @@
         android:id="@+id/company_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
         android:textAlignment="center"
         android:textColor="@color/proxi_button_purple"
         android:textStyle="bold"
@@ -44,12 +45,14 @@
         android:layout_height="wrap_content"
         android:text="Début"
         android:textAllCaps="true"
+        android:fontFamily="@font/avenirltstd_medium"
         android:textSize="15dp"
         android:textColor="@color/proxi_button_purple"/>
     <TextView
         android:id="@+id/job_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
         android:layout_below="@id/job_startTW"
         android:layout_marginTop="10dp"
         android:text="TextView" />
@@ -58,6 +61,7 @@
         android:layout_toRightOf="@id/job_startTW"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
         android:layout_marginLeft="120dp"
         android:textAllCaps="true"
         android:textSize="15dp"
@@ -68,6 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/job_endTW"
+        android:fontFamily="@font/avenirltstd_medium"
         android:layout_alignLeft="@+id/job_endTW"
         android:layout_marginTop="10dp"
         android:text="TextView" />
@@ -77,6 +82,7 @@
         android:layout_alignLeft="@+id/company_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
         android:layout_marginTop="10dp"
         android:textAllCaps="true"
         android:textSize="15dp"
@@ -87,6 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/job_titleTW"
+        android:fontFamily="@font/avenirltstd_medium"
         android:layout_alignLeft="@+id/company_image"
         android:layout_marginTop="10dp"
         android:text="TextView" />
@@ -97,6 +104,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/avenirltstd_medium"
         android:layout_marginLeft="120dp"
         android:textAllCaps="true"
         android:textSize="15dp"
@@ -107,6 +115,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/job_cashTW"
+        android:fontFamily="@font/avenirltstd_medium"
         android:layout_alignLeft="@+id/job_cashTW"
         android:layout_marginTop="10dp"
         android:text="TextView" />
@@ -115,6 +124,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@id/company_image"
+        android:fontFamily="@font/avenirltstd_medium"
         android:layout_below="@id/job_title"
         android:layout_marginTop="10dp"
         android:textAllCaps="true"
@@ -128,6 +138,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@id/company_image"
+            android:fontFamily="@font/avenirltstd_medium"
             android:layout_below="@id/job_detailTW"
             android:layout_marginTop="10dp"
             android:text="TextView"
@@ -138,6 +149,7 @@
         android:id="@+id/post"
         android:layout_marginTop="30dp"
         android:layout_width="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
