--- a/ProxiJob/app/src/main/res/layout/activity_subscribe_entreprise.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_subscribe_entreprise.xml
@@ -20,6 +20,7 @@
         <TextView
             android:id="@+id/Inscription"
             android:layout_width="match_parent"
+            android:fontFamily="@font/avenirltstd_medium"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -41,6 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Entreprise"
+            android:fontFamily="@font/avenirltstd_medium"
             android:layout_margin="10dp"
             android:background="@null"
             android:maxLines="1"
@@ -55,6 +57,7 @@
             android:layout_margin="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/avenirltstd_medium"
             android:background="@null"
             android:hint="N° SIRET"
             android:maxLines="1"
@@ -72,6 +75,7 @@
             android:layout_height="wrap_content"
             android:hint="Email"
             android:textColorHint="@color/colorWhite"
+            android:fontFamily="@font/avenirltstd_medium"
             android:background="@null"
             android:maxLines="1"
             android:singleLine="true"
@@ -82,6 +86,7 @@
             android:id="@+id/phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/avenirltstd_medium"
             android:hint="N° Télephone"
             android:layout_margin="10dp"
             android:background="@null"
@@ -100,6 +105,7 @@
             android:layout_margin="10dp"
             android:background="@null"
             android:backgroundTint="@color/colorWhite"
+            android:fontFamily="@font/avenirltstd_medium"
             android:hint="Mot de passe"
             android:maxLines="1"
             android:singleLine="true"
@@ -114,6 +120,7 @@
             android:layout_below="@+id/password"
             android:layout_margin="10dp"
             android:background="@null"
+            android:fontFamily="@font/avenirltstd_medium"
             android:backgroundTint="@color/colorWhite"
             android:hint="Adresse"
             android:maxLines="1"
@@ -132,6 +139,7 @@
             android:layout_margin="10dp"
             android:id="@+id/subscribe"
             android:layout_width="196dp"
+            android:fontFamily="@font/avenirltstd_medium"
             android:layout_height="52dp"
             android:layout_gravity="center"
             android:background="@color/proxi_button_green"
