--- a/ProxiJob/app/src/main/res/layout/custom_infowindow.xml
+++ b/ProxiJob/app/src/main/res/layout/custom_infowindow.xml
@@ -32,6 +32,7 @@
             android:id="@+id/companyName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/avenirltstd_medium"
             android:text="Chez Lucette"
             android:textSize="12dip"
             android:layout_marginLeft="4dip"
@@ -41,6 +42,7 @@
         <TextView
             android:layout_below="@+id/companyName"
             android:id="@+id/address"
+            android:fontFamily="@font/avenirltstd_medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dip"
@@ -62,6 +64,7 @@
             android:id="@+id/job"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/avenirltstd_medium"
             android:gravity="center_vertical"
             android:text="Plongeur"
             android:textColor="@color/proxi_button_purple"
@@ -72,6 +75,7 @@
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/avenirltstd_medium"
             android:layout_marginTop="5dp"
             android:gravity="center_vertical"
             android:text="XX/XX/XX au XX/XX/XX"
@@ -83,6 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:gravity="center_vertical"
+            android:fontFamily="@font/avenirltstd_medium"
             android:text="Description de la mission"
             android:textColor="@color/proxi_button_purple"
             android:textSize="12dip"
@@ -96,6 +101,7 @@
                 android:id="@+id/desc"
                 android:layout_width="match_parent"
                 android:layout_height="33dp"
+                android:fontFamily="@font/avenirltstd_medium"
                 android:layout_marginTop="5dp"
                 android:gravity="center_vertical"
                 android:text="..............."
