--- a/ProxiJob/app/src/main/res/layout/fragment_informations_company.xml
+++ b/ProxiJob/app/src/main/res/layout/fragment_informations_company.xml
@@ -11,6 +11,7 @@
         android:textAlignment="center"
         android:textColor="@color/proxi_button_purple"
         android:textStyle="bold"
+        android:fontFamily="@font/avenirltstd_medium"
         android:textSize="30sp"
         android:text="Mon Profil"/>
 
@@ -24,6 +25,7 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:src="@drawable/proxijob"
+        android:fontFamily="@font/avenirltstd_medium"
         app:civ_border_width="7dp"
         android:layout_marginTop="15dp"
         app:civ_border_color="@color/proxi_button_purple"/>
@@ -36,6 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
+        android:fontFamily="@font/avenirltstd_medium"
         android:layout_below="@id/profile_image"
         android:textColor="@color/proxi_button_purple"
         android:textStyle="bold"
@@ -47,6 +50,7 @@
         android:id="@+id/company_type"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
         android:textAlignment="center"
         android:textColor="@color/proxi_button_purple"
         android:textStyle="bold"
@@ -66,6 +70,7 @@
         android:id="@+id/descriptionT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
         android:textAlignment="center"
         android:textColor="@color/proxi_button_purple"
         android:textStyle="bold"
@@ -77,6 +82,7 @@
         android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
         android:textAlignment="center"
         android:layout_below="@id/descriptionT"
         android:textColor="@color/proxi_button_purple"
@@ -88,6 +94,7 @@
         android:id="@+id/nb_siretT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
         android:textAlignment="center"
         android:layout_below="@id/description"
         android:textColor="@color/proxi_button_purple"
@@ -98,6 +105,7 @@
     <EditText
         android:id="@+id/nb_siret"
         android:layout_width="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:layout_below="@id/nb_siretT"
@@ -110,6 +118,7 @@
         android:id="@+id/nb_telephoneT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
         android:textAlignment="center"
         android:layout_toRightOf="@id/nb_siretT"
         android:layout_below="@id/description"
@@ -122,6 +131,7 @@
         android:id="@+id/nb_telephone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
         android:layout_below="@id/nb_telephoneT"
         android:layout_alignLeft="@id/nb_telephoneT"
         android:textColor="@color/proxi_button_purple"
@@ -132,6 +142,7 @@
         android:id="@+id/emailT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
         android:textAlignment="center"
         android:textColor="@color/proxi_button_purple"
         android:layout_marginLeft="40dp"
@@ -142,6 +153,7 @@
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
         android:textAlignment="center"
         android:textColor="@color/proxi_button_purple"
         android:layout_marginLeft="40dp"
@@ -153,6 +165,7 @@
         android:id="@+id/adresseT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
         android:textAlignment="center"
         android:textColor="@color/proxi_button_purple"
         android:layout_toRightOf="@id/emailT"
@@ -164,6 +177,7 @@
         android:id="@+id/adresse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
         android:textAlignment="center"
         android:textColor="@color/proxi_button_purple"
         android:layout_below="@id/adresseT"
