--- a/ProxiJob/app/src/main/res/layout-v21/activity_choice_tutorial.xml
+++ b/ProxiJob/app/src/main/res/layout-v21/activity_choice_tutorial.xml
@@ -24,6 +24,7 @@
         android:layout_below="@+id/logo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
         android:text="VOUS PROPOSEZ \nUN EMPLOI"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
@@ -33,6 +34,7 @@
     <Button
         android:id="@+id/client"
         android:layout_below="@+id/entreprise"
+        android:fontFamily="@font/avenirltstd_medium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="VOUS CHERCHEZ \nUN EMPLOI"
