--- a/ProxiJob/app/src/main/res/layout/activity_maps.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_maps.xml
@@ -15,6 +15,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:fontFamily="@font/avenirltstd_medium"
         app:layout_constraintVertical_bias="1.0">
 
     </FrameLayout>
