--- a/ProxiJob/app/src/main/res/layout/activity_recommendations.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_recommendations.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="COUCOU"
+        android:fontFamily="@font/avenirltstd_medium"
         android:textColor="@color/proxi_button_purple"
         android:textAlignment="center"
         android:textStyle="bold"
@@ -20,6 +21,7 @@
     <ListView
         android:id="@+id/listView"
         android:layout_width="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
         android:layout_height="wrap_content"
         android:layout_below="@+id/info"/>
     </RelativeLayout>
