--- a/ProxiJob/app/src/main/res/layout/activity_subscribe_choice.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_subscribe_choice.xml
@@ -20,6 +20,7 @@
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textStyle="bold"
+        android:fontFamily="@font/avenirltstd_medium"
         android:text="S'inscrire"
         android:textSize="30sp" />
 
@@ -34,6 +35,7 @@
         android:layout_below="@+id/logo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/avenirltstd_medium"
         android:text="VOUS PROPOSEZ \nUN EMPLOI"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
@@ -44,6 +46,7 @@
         android:id="@+id/client"
         android:layout_below="@+id/entreprise"
         android:layout_width="match_parent"
+        android:fontFamily="@font/avenirltstd_medium"
         android:layout_height="wrap_content"
         android:text="VOUS CHERCHEZ \nUN EMPLOI"
         android:textColor="@color/proxi_button_green"
