--- a/ProxiJob/app/src/main/res/layout/activity_subscribe_demandeur.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_subscribe_demandeur.xml
@@ -24,6 +24,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:fontFamily="@font/avenirltstd_medium"
             android:text="Inscription \nDemandeur d'Emploi"
             android:textAlignment="center"
             android:textColor="@color/colorWhite" />
@@ -42,6 +43,7 @@
             android:layout_height="wrap_content"
             android:hint="Nom"
             android:layout_margin="10dp"
+            android:fontFamily="@font/avenirltstd_medium"
             android:background="@null"
             android:maxLines="1"
             android:singleLine="true"
@@ -54,6 +56,7 @@
             android:id="@+id/firstname"
             android:layout_margin="10dp"
             android:layout_width="match_parent"
+            android:fontFamily="@font/avenirltstd_medium"
             android:layout_height="wrap_content"
             android:background="@null"
             android:textColorHint="@color/colorWhite"
@@ -70,6 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@null"
+            android:fontFamily="@font/avenirltstd_medium"
             android:textColorHint="@color/colorWhite"
             android:textColor="@color/colorWhite"
             android:hint="Date de naissance"
@@ -87,6 +91,7 @@
             android:layout_height="wrap_content"
             android:hint="Email"
             android:textColorHint="@color/colorWhite"
+            android:fontFamily="@font/avenirltstd_medium"
             android:textColor="@color/colorWhite"
             android:background="@null"
             android:maxLines="1"
@@ -102,6 +107,7 @@
             android:textColorHint="@color/colorWhite"
             android:textColor="@color/colorWhite"
             android:hint="Mot de passe"
+            android:fontFamily="@font/avenirltstd_medium"
             android:background="@null"
             android:layout_margin="10dp"
             android:maxLines="1"
@@ -121,6 +127,7 @@
                 android:id="@+id/homme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/avenirltstd_medium"
                 android:layout_alignParentTop="true"
                 android:layout_marginEnd="44dp"
                 android:layout_marginRight="44dp"
@@ -135,6 +142,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
+                android:fontFamily="@font/avenirltstd_medium"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginEnd="62dp"
@@ -150,6 +158,7 @@
                 android:layout_below="@+id/homme"
                 android:gravity="center"
                 android:buttonTint="@color/colorWhite"
+                android:fontFamily="@font/avenirltstd_medium"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="26dp"
                 android:textColor="@color/colorWhite"
@@ -161,6 +170,7 @@
                 android:layout_width="196dp"
                 android:layout_height="52dp"
                 android:layout_centerHorizontal="true"
+                android:fontFamily="@font/avenirltstd_medium"
                 android:layout_gravity="center"
                 android:layout_below="@+id/condition"
                 android:background="@color/proxi_button_green"
