--- a/ProxiJob/app/src/main/res/layout/custom_list_post.xml
+++ b/ProxiJob/app/src/main/res/layout/custom_list_post.xml
@@ -24,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Name"
+            android:fontFamily="@font/avenirltstd_medium"
             android:textSize="15dp"
             android:textStyle="bold"
             />
