--- a/ProxiJob/app/src/main/res/layout/custom_list_view_item_missions_comp.xml
+++ b/ProxiJob/app/src/main/res/layout/custom_list_view_item_missions_comp.xml
@@ -24,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Name"
+            android:fontFamily="@font/avenirltstd_medium"
             android:textSize="15dp"
             android:textStyle="bold"
             />
@@ -31,6 +32,7 @@
         <TextView
             android:id="@+id/job"
             android:layout_width="match_parent"
+            android:fontFamily="@font/avenirltstd_medium"
             android:layout_height="wrap_content"
             android:text="status" />
 
@@ -38,6 +40,7 @@
             android:id="@+id/status"
             android:gravity="right"
             android:layout_width="match_parent"
+            android:fontFamily="@font/avenirltstd_medium"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:text="status"
