--- a/ProxiJob/app/src/main/res/layout/activity_login.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_login.xml
@@ -47,7 +47,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColorHint="@color/white"
-            app:passwordToggleEnabled="true">
+            app:passwordToggleEnabled="true"
+            android:layout_marginTop="20dp">
             <EditText
                 android:id="@+id/pass"
                 android:layout_width="match_parent"
@@ -55,7 +56,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginTop="27dp"
+
                 android:layout_marginLeft="10dp"
                 android:background="@null"
                 android:backgroundTint="@color/colorWhite"
