--- a/ProxiJob/app/src/main/res/layout/activity_details_mission.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_details_mission.xml
@@ -106,7 +106,7 @@
             android:textAllCaps="true"
             android:textSize="15dp"
             android:textColor="@color/proxi_button_purple"
-            android:text="Rémunération" />
+            android:text="Rémunération (/H)" />
         <EditText
             android:id="@+id/job_cash"
             android:layout_width="wrap_content"
