--- a/ProxiJob/app/src/main/res/layout/activity_login.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_login.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/background"
     android:orientation="vertical"
@@ -14,8 +14,8 @@
     tools:layout_alignParentTop="true">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="275dp">
+        android:layout_width="fill_parent"
+        android:layout_height="400dp">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -24,35 +24,35 @@
     </RelativeLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:textColorHint="@color/white">
             <EditText
                 android:id="@+id/ident"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:background="@null"
-                android:hint="Identifiant"
+                android:hint="Email"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
                 android:layout_marginLeft="10dp"
                 android:singleLine="true"
                 android:textColorHint="@color/colorWhite"
                 android:textColor="@color/colorWhite"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 android:backgroundTint="@color/colorWhite"
                 android:fontFamily="@font/avenirltstd_medium"/>
         </android.support.design.widget.TextInputLayout>
         <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:textColorHint="@color/white"
             app:passwordToggleEnabled="true"
             android:layout_marginTop="20dp">
             <EditText
                 android:id="@+id/pass"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
@@ -66,12 +66,12 @@
                 android:inputType="textPassword"
                 android:textColor="@color/colorWhite"
                 android:textColorHint="@color/colorWhite"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 android:fontFamily="@font/avenirltstd_medium"/>
         </android.support.design.widget.TextInputLayout>
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_gravity="center"
         android:paddingBottom="16dp"
         android:paddingLeft="16dp"
@@ -79,8 +79,8 @@
         android:paddingTop="16dp">
     <Button
         android:id="@+id/login_button"
-        android:layout_width="196dp"
-        android:layout_height="52dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@color/proxi_button_green"
         android:text="Se connecter"
@@ -92,8 +92,8 @@
     <Button
         android:layout_below="@+id/login_button"
         android:id="@+id/signup_button"
-        android:layout_width="196dp"
-        android:layout_height="52dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_gravity="center"
         android:background="@color/proxi_button_purple"
