--- a/ProxiJob/app/src/main/res/layout/activity_map_informations_details.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_map_informations_details.xml
@@ -109,7 +109,7 @@
         android:textAllCaps="true"
         android:textSize="15dp"
         android:textColor="@color/proxi_button_purple"
-        android:text="Rémunération" />
+        android:text="Rémunération (/H)" />
     <TextView
         android:id="@+id/job_cash"
         android:layout_width="wrap_content"
